// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for fit function are given 1`] = `[TypeError: Cannot read properties of undefined (reading 'nEstimator')]`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for fit function are given 2`] = `
ValidationError {
  "message": "validateFitInputs received a non-array input X",
  "name": "ValidationError",
}
`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for fit function are given 3`] = `[TypeError: Cannot read properties of undefined (reading 'nEstimator')]`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for fit function are given 4`] = `
ValidationClassMismatch {
  "message": "Number of labels=0 does not math number of samples=2",
  "name": "ValidationClassMismatch",
}
`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for fit function are given 5`] = `
ValidationClassMismatch {
  "message": "Number of labels=1 does not math number of samples=2",
  "name": "ValidationClassMismatch",
}
`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for predict function are given 1`] = `
Validation2DMatrixError {
  "message": "The matrix is not 2D shaped: [] of [0]",
  "name": "Validation2DMatrixError",
}
`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for predict function are given 2`] = `
ValidationError {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "ValidationError",
}
`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for predict function are given 3`] = `
Validation2DMatrixError {
  "message": "The matrix is not 2D shaped: [1,2] of [2]",
  "name": "Validation2DMatrixError",
}
`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for predict function are given 4`] = `[TypeError: Cannot read properties of undefined (reading 'trees')]`;

exports[`ensemble:forest RandomForest should throw an exception if incorrect inputs for predict function are given 5`] = `[TypeError: Cannot read properties of undefined (reading 'trees')]`;
